# Crosspoint-Emulator

./: .gitignore  CMakeLists.txt  README.md
docs/: UI-UX-LIBRARY-PLAN.md
docs/diagrams/: generate_diagrams.py
sim/include/: Arduino.h  ArduinoJson.h  ArduinoStub.h  Battery.h  BatteryMonitor.h  DNSServer.h  EInkDisplay.h  ESP.h  ESPmDNS.h  FreeRTOSStub.h  HTTPClient.h  HalDisplay.h  HalGPIO.h  HalStorage.h  HardwareSerial.h  ImageToBmpConverter.h  MD5Builder.h  PNGdec.h  Print.h  SDCardManager.h  SPI.h  SdFat.h  StreamString.h  WString.h  WebServer.h  WebSocketsServer.h  WiFi.h  WiFiClient.h  WiFiClientSecure.h  WiFiUdp.h  esp_http_client.h  esp_https_ota.h  esp_sntp.h  esp_task_wdt.h  esp_wifi.h  msvc_compat.h  qrcode.h  semphr.h  sim_display.h  sim_gpio.h  (+1 more)
sim/include/freertos/: task.h
sim/src/: arduino_stub.cpp  battery_stub.cpp  esp_stub.cpp  freertos_stub.cpp  http_downloader_stub.cpp  image_to_bmp.cpp  main_sim.cpp  mdns_stub.cpp  ota_updater_stub.cpp  sim_display.cpp  sim_gpio.cpp  sim_spi_bus.cpp  sim_storage.cpp
sim/src/patched/: BaseTheme.cpp  LyraTheme.cpp
